--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/CanvasView.css">
 </head>
 
 <body>
     <script type="module" src="./dist/App.js"></script>
+    <script src="https://kit.fontawesome.com/3a19a7b814.js" crossorigin="anonymous"></script>
+     <div id="board-canvas">
+
+    </div>
 </body>
 
 </html>
